--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "angular2-full-stack",
   "version": "4.0.0",
   "license": "MIT",
-  "author": "Davide Violante",
+  "author": "Nicu Timofte",
   "description": "Angular Full Stack project built using Angular 4, Express, Mongoose and Node.",
   "angular-cli": {},
   "scripts": {
@@ -26,11 +26,14 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "@types/google-maps": "^3.2.0",
     "angular2-google-maps": "^0.17.0",
+    "angularfire2": "^2.0.0-beta.8",
     "body-parser": "^1.17.1",
     "bootstrap": "4.0.0-alpha.5",
     "core-js": "^2.4.1",
     "express": "^4.15.2",
+    "firebase": "^3.9.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "mongoose": "^4.9.1",
