--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@angular/router": "^4.0.0",
     "@types/google-maps": "^3.2.0",
     "angular2-google-maps": "^0.17.0",
-    "angularfire2": "^2.0.0-beta.8",
+    "angularfire2": "^4.0.0-rc.0",
     "body-parser": "^1.17.1",
     "bootstrap": "4.0.0-alpha.5",
     "core-js": "^2.4.1",
