--- a/package.json
+++ b/package.json
@@ -38,12 +38,14 @@
     "jquery": "^3.2.1",
     "mongoose": "^4.9.1",
     "morgan": "^1.8.1",
+    "node-sass": "^4.5.3",
     "rxjs": "^5.1.0",
+    "sass-loader": "^6.0.5",
     "tether": "1.4.0",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
-    "@angular/cli": "1.0.0",
+    "@angular/cli": "1.0.0-rc.2",
     "@angular/compiler-cli": "^4.0.0",
     "@types/google-maps": "^3.2.0",
     "@types/googlemaps": "^3.26.9",
